# AIC6051-Project

./: README.md  environment.yml  pyproject.toml
heat_method/: test.py
model/field_gaps_and_forest_032_moore_c8/lightning_logs/version_0/: events.out.tfevents.1763951088.Lab-13
model/field_gaps_and_forest_032_moore_c8/lightning_logs/version_0/checkpoints/best-epoch=04-metrics/: h_mean=0.4632.ckpt
model/neural_gaps_and_forest_032_moore_c8/lightning_logs/version_0/: events.out.tfevents.1763949817.Lab-13
model/neural_gaps_and_forest_032_moore_c8/lightning_logs/version_0/checkpoints/best-epoch=26-metrics/: h_mean=0.6101.ckpt
model/vanilla_gaps_and_forest_032_moore_c8/lightning_logs/version_0/: events.out.tfevents.1763949812.Lab-13
scripts/: compare_models copy.py  compare_models.py  create_comparison_gif.py  create_gif.py  train.py  train_with_fields.py
scripts/config/: create_comparison_gif.yaml  create_gif.yaml  train.yaml  train_with_fields.yaml
src/neural_astar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/neural_astar/planner/: astar.py  differentiable_astar.py  pq_astar.py
src/neural_astar/utils/: data.py  distance_field.py  training.py
